css/style.css
body {
  font-family: 'Raleway', sans-serif;
  font-size: 2rem;
  line-height: 1.5;
}

h1, h2 {
  font-family: 'Playfair Display', sans-serif;
  font-size: 3rem;
}

h2 {
  font-size: 2.2rem;
}

#Navigation {
    font-size: 1.5rem;
    position: fixed;
    z-index: 1;
    margin-top: 2%;
    width: 97%;
    text-align: right;

}

.navigation__link {
  text-decoration: none;
  color: #fafafa;
  padding: 2%;
}

.navigation__link:hover, .navigation__link:focus {
  color: #ff6f56;
  border-bottom: 2px solid #fafafa;
}

.navigation__box {
    width: 100%;
    background-color: black;
    height: 5rem;
    z-index: 3;
    position: fixed;
    top: 0;
    padding-bottom: 1%;
}

header {
  position: relative;
  background-image: linear-gradient(-225deg, rgba(250,250,250, 0.6), 0%, rgba(0,0,0, 0.4) 50%), url(../assets/header4.png);
  background-size: 100%;
  width: 100%;
  height: 100vh;
  background-size: cover;
  background-position: center center;
  z-index: 4;
}

.title {
  position: absolute;
  width: 100%;
  text-align: center;
  bottom: 0%;
}

.title__main {
    position: relative;
    z-index: 1;
    font-size: 6.5rem;
    letter-spacing: 1.8rem;
    color: #fafafa;
    font-family: 'raleway';
    padding-left: 2%;
}

.title__sub {
    position: relative;
    z-index: 1;
    color: #fafafa;
    font-family: 'raleway';
    font-size: 1.5rem;
}

.title__chevron {
    background-image: url(../assets/downChevron.png);
    background-size: 2.5rem;
    padding: 5%;
    background-repeat: no-repeat;
    background-position: center;
}

.title__chevron:hover {
background-image: url(../assets/down-chevron-hover.png);
}

#About {
    width: 65%;
    margin: 0 auto;
    padding: 15%;
}

#About p {
    font-size: 1.5rem;
    color: black;
    border-bottom: 2px solid #ff6f56;
    padding-bottom: 3%;
}

#About h2 {
  font-family: 'raleway';
}

.team {
  width:100%;
  background-color: #3b3b3b;
  position: relative;
  overflow: auto;
  font-size: 0;
}

.person {
  overflow: hidden;
  display: inline-block;
  width: 50%;
  font-size: 0px;
  height: 50vh;
  position: relative;
  min-height: 340px;
}

.person__slidefront {
  position: relative;
  width: 100%;
  font-size: 0px;
  height: 50vh;
  min-height: 340px;
  transition: 0.5s all cubic-bezier(0.57, -0.21, 0.58, 1);
  left: 0;
  top: 0;
}

.person__content {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -49%);
}

.person__portrait {
  background-color: #292929;
  border-radius: 50%;
  border: 8px solid #07689f;
  height: 27.5vw;
  width: 27.5vw;
  max-width: 260px;
  max-height: 260px;
  margin: 0 auto;
  background-size: cover;
  background-position: center center;
  position: relative;
}

.person__portrait--philippa { background-image: url("../images/philippa.jpeg"); }
.person__portrait--antonio { background-image: url("../images/antonio.jpeg"); }
.person__portrait--finn { background-image: url("../images/finn.jpeg"); }
.person__portrait--maja { background-image: url("../images/maja.jpeg"); }

.person__title {
  text-align: center;
  margin: 0.5rem 0 0 0;
  font-family: 'Raleway', sans-serif;
  font-weight: 600;
  color: #252525;
}

.person__bio {
  font-size: 1.2rem;
}

.person__projects {
  width: 49%;
  height: 50px;
  background-color: black;
  display: inline-block;
}

.person--yellow { background-color: #fccb2a; }
.person--offwhite { background-color: #fafafa; }
.person--lightblue { background-color: #a2d5f2; }
.person--orange { background-color: #ff6f56; }

.person__slideback {
  position: absolute;
  width: 100%;
  top: 0;
  left: 100%;
  height: 50vh;
  min-height: 280px;
  transition: 0.5s all cubic-bezier(0.57, -0.21, 0.58, 1);
}

.person__info {
  background-color: white;
  width: 70%;
  max-width: 450px;
  padding: 5%;
  margin: 0 auto;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -49%);
  border-radius: 1rem;
  border: 8px solid #07689f;
  font-size: 1.5rem;
}

.person__text {
  color: black;
  font-size: 1.5rem;
}

.person__link {
  color: black;
  font-size: 1.5rem;
}
.person__link:hover {
  color: #07689f;
}

.person--centertext {
  display: block;
  margin: 0 auto;
  text-align: center;
}

.person__slideback--tl, .person__slideback--bl {
  left: -100%;
}
.person__slideback--tr, .person__slideback--br {
  left: 100%;
}
.person__slideback--tl, .person__slideback--tr {
  top: -100%
}
.person__slideback--bl, .person__slideback--br {
  top: 100%;
}
.person:hover .person__slideback--tl, .person:hover .person__slideback--tr,
.person:focus .person__slideback--tl, .person:focus .person__slideback--tr {
  left: 0;
  top: 0;
}
.person:hover .person__slideback--bl, .person:hover .person__slideback--br,
.person:focus .person__slideback--bl, .person:focus .person__slideback--br {
  left: 0;
  top: 0;
}

.person__link:focus .person__slideback {
  left: 0;
  top: 0;
}
.person:hover .person__bottomleft  {
  left: 100%;
  top: -100%;
}
.person:hover .person__bottomright {
  left: -100%;
  top: -100%;
}
.person:hover .person__topleft {
  top: 100%;
  left: 100%;
}
.person:hover .person__topright {
  top: 100%;
  left: -100%;
}

#Footer {
background-color: #07689f;
padding-top: 10%;
}

.footer__text {
  color: white;
  text-align: center;
}

.footer__chevron {
    background-image: url(../assets/up-chevron.png);
    background-size: 2.5rem;
    padding: 5%;
    background-repeat: no-repeat;
    background-position: center;
    display: block;
}

.footer__chevron:hover {
  background-image: url(../assets/up-chevron-yellow.png);
}
#Contact {
  background-color: #fafafa;
}

#contact_form {
  position: relative;
  width: 50%;
  margin: 100px auto;
}

::-webkit-input-placeholder {
   text-align: center;
}

:-moz-placeholder { /* Firefox 18- */
   text-align: center;
}

::-moz-placeholder {  /* Firefox 19+ */
   text-align: center;
}

:-ms-input-placeholder {
   text-align: center;
}

.row {
  position: relative;
  width: 95%;
  margin: 0 auto;
  text-indent: 10px;
}

#name, #email, #message, #submit_button {
  border: 2px solid rgba(0,0,0,0.5);
  border-radius: 10px;
}

input {
  position: relative;
  width: 50%;
  margin: 0 auto;
}

